# simplseq-malaria-amplicon-pipeline-nf

./: .gitattributes  .gitignore  README.md  environment.yml  install-simplseq.sh  main.nf  nextflow.config  pyproject.toml
gui/: flask_app.py
gui/static/css/: app.css
gui/static/js/: app.js
gui/templates/: index.html
locks/: linux-64-explicit.txt  osx-64-explicit.txt
reference/: amplicons_noprimers.fasta  snv_filters.txt
src/simplseq/: __init__.py  cli.py  job_state.py  pathutils.py  progress.py  provenance.py  resources.py  runner.py  samplesheet.py
workflow/primers/: overlap_pr1.fa  overlap_pr2.fa  primers_fwd.fa  primers_rev.fa
workflow/scripts/: ASV_to_CIGAR.py  AmpliconPipeline.py  adjustASV.R  biological_equivalence_report.py  create_meta.py  postProc_dada2.R  runDADA2.R  run_dcifer.R  run_dinemites.R  simplseq_to_dcifer.R  simplseq_to_dinemites.R
