[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simplseq-nf-app"
version = "2.2.1"
description = "GUI-first SIMPLseq malaria amplicon workflow app"
requires-python = ">=3.11"
dependencies = [
  "flask",
  "pandas",
]

[project.scripts]
simplseq = "simplseq.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
